<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyNote</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="add">添加</string>
	<string name="hint">请输入表格第一项内容</string>
		
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
	<string name="yes">是</string>
	<string name="no">否</string>
</resources>